tests/unit/compile/cases/syntax-errors/07.doctype-empty.t
<!DOCTYPE> text
---- THROW% ----
Unexpected ">"; expected: <ws> near `> text` in `%s` at line 1
